--- a/public/css/sass/header.scss
+++ b/public/css/sass/header.scss
@@ -49,6 +49,9 @@
 }
 
 @media only screen and (max-width: 370px) {
+  #header {
+    height: 29vh !important;
+  }
   .header-subtext {
     font-size: 14px !important;
   }
